--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,9 @@ ktor_version=2.3.7
 kotlin_version=1.9.21
 logback_version=1.4.11
 kotlin.code.style=official
+
+postgresql_version=42.2.27
 exposed_version=0.41.1
 h2_version=2.1.214
+hikari_version=5.0.1
+commons_codec_version=1.15
